--- a/index.html
+++ b/index.html
@@ -1,198 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+ <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University Website.</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+      rel="stylesheet"/>
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+          <!-- ... other meta tags ... -->
+    <link rel="prefetch" href="Course.html" as="document">
+    <link rel="prefetch" href="Campus.html" as="document">
+    <link rel="prefetch" href="facilities.html" as="document">
+    <link rel="prefetch" href="Testimonials.html" as="document">
+ </head>
   <body>
-    <section class="header">
-      <nav>
-        <a href="index.html"
-          ><img src="Eduford-Assets/eduford_img/logo.png"
-        /></a>
+    <div class="video-background">
+      <video autoplay loop muted playsinline id="background-video">
+       <source src="Eduford-Assets/Video.mp4" type="video/mp4">
+      </video>
+      <section class="header">
+          <nav>
+            <a href="index.html">
+              <img src="Eduford-Assets/eduford_img/logo.png"/>
+            </a>
 
-        <div class="nav-links" id="navLinks">
-          <i class="fa fa-times" onclick="hideMenu()"></i>
-          <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT-US</a></li>
-            <li><a href="">COURSE</a></li>
-            <li><a href="">CAMPUS</a></li>
-            <li><a href="">FACILITIES</a></li>
-            <li><a href="">CONTACT</a></li>
-          </ul>
-        </div>
-        <i class="fa fa-bars" onclick="showMenu()"></i>
-      </nav>
-      <div class="text-box">
-        <h1>World's Biggest University</h1>
-        <p>
-          Making websites is now one of the easiest thing in the world. You just
-          need to learn HTML, CSS,<br />Javascript and you are good to go.
-        </p>
-        <a href="" class="hero-btn">Visit Us To know More</a>
-      </div>
+            <div class="nav-links" id="navLinks">
+              <i class="fa fa-times" onclick="hideMenu()"></i>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Course.html">Course</a></li>
+                <li><a href="Campus.html">Campus</a></li>
+                <li><a href="facilities.html">Facilities</a></li>
+                <li><a href="Testimonials.html">Testimonials</a></li>
+              </ul>
+            </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
+          </nav>
+          <div class="text-box">
+            <h1>Quantum Solutions Limited</h1>
+            <p>Innovating Through Technology. Our approach to problem-solving & strategic planning will help you deliver exceptional services.
+              <br />We provide the perfect blend of people and technology.</p>
+            <a href="" class="hero-btn">Visit Us To know More</a>
+          </div>
+        </section>
+            <!----Contact-us-->
+        <section class="contact">
+          <div class="contact-box">
+            <h1>Quantum Solutions Ltd, 29 Patrick Bokkor Cresent Opp Jabi Gss, Jabi, Abuja. </h1>
+            <a href="" class="contact-btn">CONTACT US</a>
+          </div>
+
+        </section>
+    </div>
+
+    <!----Footer-->
+
+    <section class="footer" >
+            <h4>Want to join the team?</h4>
+            <p>Are you a creative, skilled resource, or are you looking to add to your experience? We are always searching for brilliant minds to take up opportunities available.<br> Why not tell us about your amazing self and let us figure out how you can be a part of our incredible team?  </p>
+            <div class="icons">
+              <i class="fa fa-facebook"></i>
+              <i class="fa fa-instagram"></i>
+              <i class="fa fa-linkedin"></i>
+              <i class="fa fa-twitter"></i>
+            </div>
+            <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
     </section>
-    <!-----course----->
-    <section class="course">
-        <h1>Courses We Offer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ipsam nemo aliquid debitis voluptas sequi recusandae eveniet consequatur, aut dolores natus neque. Neque sapiente nemo, minus dolorem esse inventore ducimus!</p>
-
-        <div class="row">
-            <div class="course-col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores doloremque suscipit voluptas veritatis veniam magni labore explicabo sunt dolor sed ratione similique beatae nostrum expedita et earum fugit, qui cupiditate.</p>
-            </div>
-            <div class="course-col">
-                <h3>Degree</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores doloremque suscipit voluptas veritatis veniam magni labore explicabo sunt dolor sed ratione similique beatae nostrum expedita et earum fugit, qui cupiditate.</p>
-            </div>
-            <div class="course-col">
-                <h3>Post Graduate</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores doloremque suscipit voluptas veritatis veniam magni labore explicabo sunt dolor sed ratione similique beatae nostrum expedita et earum fugit, qui cupiditate.</p>
-            </div>
-        </div>
-
-    </section>
-
-<!----- campus ----->
-<section class="campus">
-    <h1>Our Global Campus</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem distinctio, quaerat porro molestias illum veritatis aliquid magnam iusto cum animi ex voluptatibus, sit libero quis explicabo, nam ratione suscipit maiores.</p>
-
-    <div class="row">
-        <div class="campus-col">
-            <img src="Eduford-Assets/eduford_img/london.png">
-            <div class="layer">
-                <h3>LONDON</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="Eduford-Assets/eduford_img/newyork.png">
-            <div class="layer">
-                <h3>NEW YORK</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="Eduford-Assets/eduford_img/washington.png">
-            <div class="layer">
-                <h3>WASHINGTON</h3>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<!----- Facilities ------>
-<section class="facilities">
-  <h1>Our Facilities</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab corporis autem mollitia quis, ullam consectetur hic consequatur deleniti, ex odit sint nihil, facilis quia eos optio magnam asperiores placeat reiciendis!</p>
-
-  <div class="row">
-    <div class="facilities-col">
-      <img src="Eduford-Assets/eduford_img/library.png">
-      <h3>World Class Library</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur minus id odit fugit eos quaerat aspernatur harum repellat! Quis ipsa esse odio error, tenetur alias consequuntur ipsam qui porro repudiandae?</p>
-    </div>
-    <div class="facilities-col">
-      <img src="Eduford-Assets/eduford_img/basketball.png">
-      <h3>Largest Play Ground</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur minus id odit fugit eos quaerat aspernatur harum repellat! Quis ipsa esse odio error, tenetur alias consequuntur ipsam qui porro repudiandae?</p>
-    </div>
-    <div class="facilities-col">
-      <img src="Eduford-Assets/eduford_img/cafeteria.png">
-      <h3>Tasty and Healthy Food</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur minus id odit fugit eos quaerat aspernatur harum repellat! Quis ipsa esse odio error, tenetur alias consequuntur ipsam qui porro repudiandae?</p>
-    </div>
-  </div>
-
-</section>
-
-<!------testimonials-->
-
-<section class="testimonials">
-    <h1>What Our Students Says</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab corporis autem mollitia quis, ullam consectetur hic consequatur deleniti, ex odit sint nihil, facilis quia eos optio magnam asperiores placeat reiciendis!</p>
-
-     <div class="row">
-      <div class="testimonial-col">
-        <img src="Eduford-Assets/eduford_img/user1.jpg">
-        <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam vel, iste asperiores commodi repellendus recusandae deserunt. Voluptate beatae reprehenderit qui libero perferendis expedita, tempora odit natus nesciunt voluptatibus vitae sequi.</p>
-          <h3>Christine Barkley</h3>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star-o"></i>
-
-        </div>
-      </div>
-      <div class="testimonial-col">
-        <img src="Eduford-Assets/eduford_img/user2.jpg">
-        <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam vel, iste asperiores commodi repellendus recusandae deserunt. Voluptate beatae reprehenderit qui libero perferendis expedita, tempora odit natus nesciunt voluptatibus vitae sequi.</p>
-          <h3>David Byer</h3>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star"></i>
-          <i class="fa fa-star-half-o"></i>
-        </div>
-      </div>
-     </div>
-</section>
-<!----Call To Action-->
-<section class="cta">
-  <h1>Enroll For Our Online Courses<br> Anywhere From The World</h1>
-  <a href="" class="hero-btn">CONTACT US</a>
-</section>
-<!----Footer-->
-
-<section class="footer">
-  <h4>About Us</h4>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At magni tempore illum rerum. Non, sapiente iusto!<br> Ab eaque ad similique omnis provident sapiente, dolores iste eveniet quae. Recusandae, ipsa voluptate!</p>
-  <div class="icons">
-    <i class="fa fa-facebook"></i>
-    <i class="fa fa-instagram"></i>
-    <i class="fa fa-linkedin"></i>
-    <i class="fa fa-twitter"></i>
-  </div>
-  <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
-</section>
-
-
-
-
-
-
-
-
-    <!-----JavaScript for Toggle Menu------>
-    <script>
-
-        var navLinks = document.getElementById("navLinks");
-        function showMenu(){
-            navLinks.style.right = "0";
-        }
-        function hideMenu(){
-            navLinks.style.right = "-200px";
-        }
-
-    </script>
-
-
-
   </body>
 </html>
