--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
           <!-- ... other meta tags ... -->
-    <link rel="prefetch" href="Course.html" as="document">
-    <link rel="prefetch" href="Campus.html" as="document">
-    <link rel="prefetch" href="facilities.html" as="document">
-    <link rel="prefetch" href="Testimonials.html" as="document">
+    <link rel="prefetch" href="services.html" as="document">
+    <link rel="prefetch" href="Office.html" as="document">
+    <link rel="prefetch" href="About-us.html" as="document">
+    <link rel="prefetch" href="Goals.html" as="document">
  </head>
   <body>
     <div class="video-background">
@@ -24,24 +24,25 @@
       </video>
       <section class="header">
           <nav>
+
             <a href="index.html">
-              <img src="Eduford-Assets/eduford_img/logo.png"/>
+              <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
             </a>
 
             <div class="nav-links" id="navLinks">
               <i class="fa fa-times" onclick="hideMenu()"></i>
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Course.html">Course</a></li>
-                <li><a href="Campus.html">Campus</a></li>
-                <li><a href="facilities.html">Facilities</a></li>
-                <li><a href="Testimonials.html">Testimonials</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Office.html">Office</a></li>
+                <li><a href="About-us.html">About-us</a></li>
+                <li><a href="Goals.html">Goals</a></li>
               </ul>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
+            <i class="fa fa-bars" onclick="showMenu('nav-links')"></i>
           </nav>
           <div class="text-box">
-            <h1>Quantum Solutions Limited</h1>
+            <h1>Quantum Solutions Limited.</h1>
             <p>Innovating Through Technology. Our approach to problem-solving & strategic planning will help you deliver exceptional services.
               <br />We provide the perfect blend of people and technology.</p>
             <a href="" class="hero-btn">Visit Us To know More</a>
@@ -70,5 +71,6 @@
             </div>
             <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
