changed responsive menu function.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Website.</title>
+    <title>Quantum Solutions Limited.</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,54 +23,65 @@
        <source src="Eduford-Assets/Video.mp4" type="video/mp4">
       </video>
       <section class="header">
-          <nav>
-
-            <a href="index.html">
-              <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
-            </a>
-
-            <div class="nav-links" id="navLinks">
-              <i class="fa fa-times" onclick="hideMenu()"></i>
+        <nav>
+          <a href="index.html">
+            <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
+          </a>
+          <!-- Mobile Menu Button -->
+          <div class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+           <!-- Desktop Navigation -->
+          <div class="nav-links" id="navLinks">
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Office.html">Office</a></li>
-                <li><a href="About-us.html">About-us</a></li>
+                <li><a href="About-us.html">About us</a></li>
                 <li><a href="Goals.html">Goals</a></li>
               </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu('nav-links')"></i>
-          </nav>
+          </div>
+        </nav>
           <div class="text-box">
             <h1>Quantum Solutions Limited.</h1>
             <p>Innovating Through Technology. Our approach to problem-solving & strategic planning will help you deliver exceptional services.
               <br />We provide the perfect blend of people and technology.</p>
             <a href="" class="hero-btn">Visit Us To know More</a>
           </div>
-        </section>
-            <!----Contact-us-->
-        <section class="contact">
-          <div class="contact-box">
-            <h1>Quantum Solutions Ltd, 29 Patrick Bokkor Cresent Opp Jabi Gss, Jabi, Abuja. </h1>
-            <a href="" class="contact-btn">CONTACT US</a>
-          </div>
+   </div>
+  </section>
+         <!----Contact-us-->
+            <section class="contact">
+              <div class="contact-container">
+                <div class="contact-box">
+                 <h1>Quantum Solutions Ltd, 29 Patrick Bokkor Cresent Opp Jabi Gss, Jabi, Abuja. </h1>
+                 <a href="" class="contact-btn">CONTACT US</a>
+                </div>
+              </div>
+            </section>
 
-        </section>
-    </div>
+            <!----Footer-->
+            <section class="footer" >
+              <div class="footer-container">
+                <div class="footer-content">
+                    <h4>Want to join the team?</h4>
+                    <p>Are you a creative, skilled resource, or are you looking to add to your experience? We are always searching for brilliant minds to take up opportunities available.<br> Why not tell us about your amazing self and let us figure out how you can be a part of our incredible team?  </p>
 
-    <!----Footer-->
-
-    <section class="footer" >
-            <h4>Want to join the team?</h4>
-            <p>Are you a creative, skilled resource, or are you looking to add to your experience? We are always searching for brilliant minds to take up opportunities available.<br> Why not tell us about your amazing self and let us figure out how you can be a part of our incredible team?  </p>
-            <div class="icons">
-              <i class="fa fa-facebook"></i>
-              <i class="fa fa-instagram"></i>
-              <i class="fa fa-linkedin"></i>
-              <i class="fa fa-twitter"></i>
-            </div>
-            <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
-    </section>
-    <script src="script.js"></script>
+                    <div class="icons">
+                      <i class="fa fa-facebook"></i>
+                      <i class="fa fa-instagram"></i>
+                      <i class="fa fa-linkedin"></i>
+                      <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="copyright">
+                      <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
+                    </div>
+                  </div>
+                </div>
+      </section>
+       <script src="script.js"></script>
   </body>
 </html>
