--- a/Goals.html
+++ b/Goals.html
@@ -18,7 +18,7 @@
             </a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Our Services</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="Office.html">Office</a></li>
           <li><a href="About-us.html">About us</a></li>
           <li><a href="Goals.html">Goals</a></li>
