--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
             <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
           </a>
           <!-- Mobile Menu Button -->
-          <div class="hamburger">
+          <div class="hamburger" id="hamburger">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
+
            <!-- Desktop Navigation -->
           <div class="nav-links" id="navLinks">
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Office.html">Office</a></li>
-                <li><a href="About-us.html">About us</a></li>
+                <li><a href="About-us.html">About-us</a></li>
                 <li><a href="Goals.html">Goals</a></li>
               </ul>
           </div>
