--- a/services.html
+++ b/services.html
@@ -16,18 +16,23 @@
               <h2 class="logo">QUANTUM SOLUTIONS LIMITED.</h2>
             </a>
 
+                    <!-- Mobile Menu Button -->
+          <div class="hamburger" id="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+
+           <!-- Desktop Navigation -->
           <div class="nav-links" id="navLinks">
-            <i class="fa fa-times" onclick="hideMenu()"></i>
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Office.html">Office</a></li>
-                <li><a href="About-us.html">About us</a></li>
+                <li><a href="About-us.html">About-us</a></li>
                 <li><a href="Goals.html">Goals</a></li>
               </ul>
-            </div>
-            <i class="fa fa-bars" onclick="showMenu('nav-links')"></i>
-
+          </div>
+       
         </nav>
         <h1>Our Services.</h1>
         <h2>Whatever the project size or scope, our principles stay the same. Our Research, Design, Build framework is tried, tested and proven.</h2>
