--- a/About-us.html
+++ b/About-us.html
@@ -9,18 +9,25 @@
  <body >
     <!----- About us ------>
     <section class="About-us">
-
-      <nav>
-            <a href="index.html">
-              <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
-            </a>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="Office.html">Office</a></li>
-          <li><a href="About-us.html">About us</a></li>
-          <li><a href="Goals.html">Goals</a></li>
-      </nav>
+        <nav class="global-nav">
+          <a href="index.html" class="logo">QUANTUM SOLUTIONS LIMITED</a>
+          <!-- Hamburger Button -->
+          <button class="hamburger" id="hamburger" aria-expanded="false" aria-label="Menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </button>
+           <!-- Desktop Navigation-links -->
+          <div class="nav-links" id="navLinks">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Office.html">Office</a></li>
+                <li><a href="About-us.html">About-us</a></li>
+                <li><a href="Goals.html">Goals</a></li>
+              </ul>
+          </div>
+        </nav>
 
       <h1>About Us:</h1>
       <p>We support organisations in making more effective use of technology. We also help in evaluating current technologies and related policies, assessing staff knowledge and support needs.</p>
