--- a/office.html
+++ b/office.html
@@ -9,18 +9,24 @@
 <body >
         <!----- Office ----->
 <section class="Office" >
-    <nav>
-            <a href="index.html">
-              <h2 class="logo">QUANTUM SOLUTIONS LIMITED</h2>
-            </a>
-
-           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html"> Services</a></li>
-            <li><a href="Office.html">Office</a></li>
-            <li><a href="About-us.html">About us</a></li>
-            <li><a href="Goals.html">Goals</a></li>
-
+        <nav class="global-nav">
+          <a href="index.html" class="logo">QUANTUM SOLUTIONS LIMITED</a>
+          <!-- Hamburger Button -->
+          <button class="hamburger" id="hamburger" aria-expanded="false" aria-label="Menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </button>
+           <!-- Desktop Navigation-links -->
+          <div class="nav-links" id="navLinks">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Office.html">Office</a></li>
+                <li><a href="About-us.html">About-us</a></li>
+                <li><a href="Goals.html">Goals</a></li>
+              </ul>
+          </div>
         </nav>
 
     <h1>Our Global Offices</h1>
