--- a/services.html
+++ b/services.html
@@ -11,18 +11,15 @@
 
     <section class="services">
 
-        <nav>
-            <a href="index.html">
-              <h2 class="logo">QUANTUM SOLUTIONS LIMITED.</h2>
-            </a>
-
-                    <!-- Mobile Menu Button -->
-          <div class="hamburger" id="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-
-           <!-- Desktop Navigation -->
+        <nav class = "global-nav" >
+          <a href="index.html" class="logo">QUANTUM SOLUTIONS LIMITED</a>
+          <!-- Hamburger Button -->
+          <button class="hamburger" id="hamburger" aria-expanded="false" aria-label="Menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </button>
+           <!-- Desktop Navigation-links -->
           <div class="nav-links" id="navLinks">
               <ul>
                 <li><a href="index.html">Home</a></li>
@@ -32,11 +29,9 @@
                 <li><a href="Goals.html">Goals</a></li>
               </ul>
           </div>
-       
         </nav>
         <h1>Our Services.</h1>
-        <h2>Whatever the project size or scope, our principles stay the same. Our Research, Design, Build framework is tried, tested and proven.</h2>
-
+        <h2>Whatever the project size or scope, our principles stay the same. <br>Our Research, Design, Build framework is tried, tested and proven.</h2>
         <div class="services-row">
             <div class="services-col">
                 <h3>IT Consulting & Advisory</h3>
@@ -51,7 +46,6 @@
                 <p>We provide you with skilled devs who are passionate about using their skills & expertise to create fantastic solutions</p>
             </div>
         </div>
-
     </section>
      <script src="script.js"></script>
 </body>
