--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
       rel="stylesheet"/>
-    <link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
           <!-- ... other meta tags ... -->
     <link rel="prefetch" href="services.html" as="document">
     <link rel="prefetch" href="Office.html" as="document">
@@ -64,21 +63,20 @@
             <section class="footer" >
               <div class="footer-container">
                 <div class="footer-content">
-                    <h4>Want to join the team?</h4>
-                    <p>Are you a creative, skilled resource, or are you looking to add to your experience? We are always searching for brilliant minds to take up opportunities available.<br> Why not tell us about your amazing self and let us figure out how you can be a part of our incredible team?  </p>
-
-                    <div class="icons">
-                      <i class="fa fa-facebook"></i>
-                      <i class="fa fa-instagram"></i>
-                      <i class="fa fa-linkedin"></i>
-                      <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="copyright">
-                      <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
-                    </div>
+                  <h4>Want to join the team?</h4>
+                  <p>Are you a creative, skilled resource, or are you looking to add to your experience? We are always searching for brilliant minds to take up opportunities available.<br> Why not tell us about your amazing self and let us figure out how you can be a part of our incredible team?  </p>
+                  <div class="icons">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-linkedin"></i>
+                    <i class="fa fa-twitter"></i>
+                  </div>
+                  <div class="copyright">
+                    <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
                   </div>
                 </div>
-      </section>
+              </div>
+            </section>
        <script src="script.js"></script>
   </body>
 </html>
