--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Quantum Solutions Limited.</h1>
             <p>Innovating Through Technology. Our approach to problem-solving & strategic planning will help you deliver exceptional services.
               <br />We provide the perfect blend of people and technology.</p>
-            <a href="" class="hero-btn">Visit Us To know More</a>
+            <a href="more.html" class="hero-btn">Visit Us To know More</a>
           </div>
    </div>
   </section>
@@ -73,6 +73,7 @@
                   </div>
                   <div class="copyright">
                     <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
+                                <p>©️ Quantum Solutions Limited. All right resereved</p>
                   </div>
                 </div>
               </div>
