--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
                     <i class="fa fa-linkedin"></i>
                     <i class="fa fa-twitter"></i>
                   </div>
+
+                  
                   <div class="copyright">
                     <p>made with <i class="fa fa-heart-o"></i> by Reuben Magaji</p>
-                                <p>©️ Quantum Solutions Limited. All right resereved</p>
+                                <p>©️ Quantum Solutions Limited. All rights resereved.</p>
                   </div>
                 </div>
               </div>
