--- a/more.html
+++ b/more.html
@@ -53,7 +53,7 @@
             <i class="fa fa-twitter"></i>
         </div>
         <div class="copyright">
-            <p>©️ Quantum Solutions Limited. All right resereved</p>
+            <p>©️ Quantum Solutions Limited. All rights resereved.</p>
         </div>
    </section>
   <script src="script.js"></script>
